# MAIL-LOG

./: .gitignore  CMakeLists.txt  README.md  alarm_notify.html  alarm_page.html  database.py  exeProvider.py  log.py  mail.py  main.py  send_mail.py  settings.py  variables.py
Source/: main.cpp
